<resources>
    <string name="app_name">Story App</string>
    <string name="hint_insert_password">Type your password here!</string>
    <string name="hint_type_your_email_here">Type your email here!</string>
    <string name="welcome_to_story_app">Welcome to Story App</string>
    <string name="welcome_register">Complete this form to Register</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="warning_password">Character length must be more than 6</string>
    <string name="warning_email">Please fill valid email</string>
    <string name="error_pass_not_same">Please enter the correct password</string>
    <string name="please_complete">Please Complete</string>
    <string name="don_t_have_an_account">Don\'t have an account? Register</string>
    <string name="already_have_an_account">Already have an account? Please Login</string>
    <string name="type_your_username_here">Type your username here!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_camera">Camera</string>
    <string name="hint_description">Description</string>
    <string name="btn_upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="add_new_story">Add New Story</string>
    <string name="about">About</string>
    <string name="loading">Loading…</string>
    <string name="description">Description</string>
    <string name="dialog_logout">Are you sure to logout?</string>
    <string name="dialog_exit_app">Are you sure to exit this app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="detail_story">Detail Story</string>
    <string name="language">Language</string>
    <string name="error_no_image_selected">Please insert image first!.</string>
    <string name="login_failed">Login Failed!</string>
    <string name="fail_instance_retrofit">Failed to instance Retrofit</string>
    <string name="title_activity_maps">Story in Maps</string>
    <string name="map_version">Map Version</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="try_again">Try Again</string>
    <string name="get_location">Get Location</string>
    <string name="initial_null">NULL</string>
    <string name="no_location_found">Location is not found. Try Again</string>
    <string name="access_location_not_allowed">Sorry Location Access Not Allowed</string>
    <string name="choose_picture">Choose a Picture</string>
</resources>