<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16"
        tools:context=".ui.AddNewStoryFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/previewImageView"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_8"
            app:layout_constraintBottom_toTopOf="@+id/btn_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_place_holder" />


        <Button
            android:id="@+id/btn_gallery"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_gallery"
            app:layout_constraintBottom_toTopOf="@+id/my_location"
            app:layout_constraintEnd_toStartOf="@+id/btn_camera"
            app:layout_constraintHorizontal_bias="0.406"
            app:layout_constraintStart_toStartOf="@+id/outlined_desc" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_camera"
            app:layout_constraintBottom_toBottomOf="@+id/btn_gallery"
            app:layout_constraintEnd_toEndOf="@+id/outlined_desc"
            app:layout_constraintHorizontal_bias="0.794"
            app:layout_constraintStart_toStartOf="@+id/outlined_desc"
            app:layout_constraintTop_toTopOf="@+id/btn_gallery" />

        <Button
            android:id="@+id/my_location"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_location"
            app:icon="@drawable/ic_baseline_my_location_24"
            app:layout_constraintBottom_toBottomOf="@+id/tv_lon_lat"
            app:layout_constraintStart_toStartOf="@+id/previewImageView"
            app:layout_constraintTop_toTopOf="@+id/tv_lon_lat"
            app:strokeColor="@color/teal_500"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/tv_lon_lat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:gravity="center"
            android:text="@string/initial_null"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/light_blue_600"
            app:layout_constraintBottom_toTopOf="@+id/outlined_desc"
            app:layout_constraintEnd_toEndOf="@+id/previewImageView"
            app:layout_constraintStart_toEndOf="@+id/my_location" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlined_desc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="@dimen/margin_8"
            app:layout_constraintBottom_toTopOf="@+id/btn_upload">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/pb_add_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.saadfauzi.storyapp.customviews.ButtonUpload
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_upload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>